theme button alignment fix

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -59,7 +59,7 @@ button
   right: 1em
   background: var(--btn-bg-color)
   color: var(--btn-text-color)
-  font-size: .75em
+  font-size: .775em
   margin: 0
   padding: .5em
   border: none
@@ -75,6 +75,8 @@ button
 
   &:after
     content: var(--btn-content)
+    display: inline-block
+    margin-top: 1px
 
 h1
   font-size: 2em
